[package]
name = "fibrous"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cohaereo <cohae@cohae.dev>"]
description = "A lightweight fiber abstraction over multiple backends (ucontext, win32, asm)."
categories = ["concurrency", "asynchronous", "api-bindings"]
keywords = ["fibers", "coroutines", "context", "concurrency", "threading"]

[dependencies]
context = "3.0.0"
cfg-if = "1.0.4"
libc = { version = "0.2", optional = true }

[features]
default = ["ucontext"]
ucontext = ["libc"]
